--- a/Functions/fizzbuzz.html
+++ b/Functions/fizzbuzz.html
@@ -4,7 +4,15 @@
         let answer = parseInt(prompt("Please enter the number you would like to FizzBuzz upto: "))
 
         for (let i = 1; i <= answer; i++) {
-            console.log(i)
-        }
+            if (i % 3 === 0 && i % 5 === 0) {
+                console.log("Fizzbuzz")
+            } else if (i % 3 === 0) {
+                console.log("fizz")
+            } else if (i % 5 === 0) {
+                console.log("buzz")
+            } else {
+                console.log(i)
+            }
+        } 
     </script>
 </main>
